css/mint-overview.css
#mintRobinhoodSyncStatus {
    position: fixed;
    top: 1em;
    right: 1em;
    background-color: #fff;
    border: 1px solid #000;
    padding: 1em;
    font-size: 1em;
    opacity: 1;
    transition: opacity ease-out 1s;
    max-width: 100%;
    width: 300px;
    z-index: 999999;
}
#mintRobinhoodSyncStatus a {
    padding-top: 1em;
}

#mintRobinhoodSyncStatus img {
    max-height: 64px;
    padding: 1em 1em 0 0;
    float: left;
}

#mintRobinhoodSyncStatus.fadeOut {
    opacity: 0;
}

#mintRobinhoodSyncStatus a {
    display: block;
}

#mintRobinhoodSyncStatus .title {
    padding-bottom: 1em;
    font-size: 1.2em;
    font-weight: bold;
}

.macOSNotif_Image {
    padding: 1.5em .4em;
    width: 32px !important;
}
.macOSNotif_Text {
    text-decoration: none !important;
    cursor: unset !important;
}
.macOSNotif_Title {
  text-overflow: unset !important;
}

